feat: revamped login and register

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -441,7 +441,7 @@
     "PROGRAM_DATE": "Program publish date"
   },
   "LOGIN": {
-    "TITLE": "Log In",
+    "TITLE": "Log in to your account",
     "EMAIL": "Email",
     "PASSWORD": "Password",
     "BUTTON": "Log In",
