--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -492,7 +492,7 @@
     "PROGRAM_DATE": "Programar fecha de publicación"
   },
   "LOGIN": {
-    "TITLE": "Iniciar Sesión",
+    "TITLE": "Iniciá sesión",
     "EMAIL": "Email",
     "PASSWORD": "Contraseña",
     "BUTTON": "Iniciar Sesión",
