--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,8 @@
 {
   "NULL":"NULL",
+  "DEFAULT": {
+    "PAGETITLE": "ITBA IEEE Stud. Branch"
+  },
   "HOME": {
     "TITLE": "Student Branch",
     "CARGO": {
@@ -487,6 +490,7 @@
   },
   "RAS": {
     "TITLE": "IEEE ITBA",
+    "PAGETITLE": "ITBA IEEE | RAS Student Branch Chapter",
     "SUBTITLE": "RAS Student Branch Chapter",
     "EVENTS": "Events",
     "TEAM": {
@@ -813,6 +817,7 @@
     "DATESTRING": "Date: "
   },
   "WIE": {
+    "PAGETITLE": "ITBA IEEE | WIE Branch Student Chapter",
     "WHATIS": {
       "TITLE": "What is IEEE WIE ITBA?",
       "CONTENT": "IEEE WIE ITBA is the IEEE ITBA Student Branch's WIE Affinity Group"
@@ -871,5 +876,8 @@
     "CONTACT": {
       "TITLE": "Contact"
     }
+  },
+  "TITLE": {
+
   }
 }
