--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -269,6 +269,7 @@
     "FORMAT_SUBTITLE": "Course format",
     "FORMAT": "The classes on this course consist of text and video explanations, with the addition of interactive challenges to solve. There will be a week between classes to read and solve these challenges, while being able to chat with us and the rest of the participants using Discord. In addition to this, we will have weekly livestreams to answer your questions.",
     "ENROLLBUTTON": "Enroll now!",
+    "CONTENTBUTTON": "Go to content",
     "SOLUTIONBUTTON": "Go to solutions",
     "QUESTIONS": {
       "TEXT": "We opened a SubReddit to answer questions: ",
