--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -167,6 +167,10 @@
       "CONTENT": "¡Entérate de las últimas noticias científicas y tecnológicas!",
       "MORENEWS": "Ver más noticias"
     },
+    "CHAPTERS": {
+      "TITLE": "Capítulos Estudiantiles",
+      "CONTENT": "¡Conoce nuestros capítulos estudiantiles!"
+    },
     "EVENTS": {
       "TITLE": "Eventos",
       "CONTENT": "¡Entérate de nuestros próximos eventos!",
