--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -519,7 +519,8 @@
     "ABOUTRAS": {
       "TITLE": "About RAS",
       "CONTENT1": "RAS strives to advance innovation, education, and fundamental and applied research in robotics and automation. Robotics focuses on systems incorporating sensors and actuators that operate autonomously or semi-autonomously in cooperation with humans. Robotics research emphasizes intelligence and adaptability to cope with unstructured environments. Automation research emphasizes efficiency, productivity, quality, and reliability, focusing on systems that operate autonomously, often in structured environments over extended periods, and on the explicit structuring of such environments.",
-      "CONTENT2": "The Society provides aid in promoting close cooperation and exchange of technical information among its Members and Affiliates, and to this end holds meetings for the presentation of papers and their discussion, sponsors appropriate periodicals and special technical publications, and through its committee's studies and provides for the needs of its members and affiliates."
+      "CONTENT2": "The Society provides aid in promoting close cooperation and exchange of technical information among its Members and Affiliates, and to this end holds meetings for the presentation of papers and their discussion, sponsors appropriate periodicals and special technical publications, and through its committee's studies and provides for the needs of its members and affiliates.",
+      "SHORTCONTENT": "RAS strives to advance innovation, education, and fundamental and applied research in robotics and automation."
     }
   },
 
@@ -829,7 +830,8 @@
     "PAGETITLE": "ITBA IEEE | WIE Branch Student Chapter",
     "WHATIS": {
       "TITLE": "What is IEEE WIE ITBA?",
-      "CONTENT": "IEEE WIE ITBA is the IEEE ITBA Student Branch's WIE Affinity Group"
+      "CONTENT": "IEEE WIE ITBA is the IEEE ITBA Student Branch's WIE Affinity Group",
+      "SHORTCONTENT": "IEEE WIE ITBA is the IEEE ITBA Student Branch's WIE Affinity Group, looking to encourage girls and women to get involved in STEM field careers"
     },
     "OBJECTIVES": {
       "TITLE": "Objectives",
@@ -888,5 +890,8 @@
   },
   "TITLE": {
 
+  },
+  "CS": {
+    "ABOUT": "A technology-focused organization made up of students and alumni of ITBA, dedicated to inspiring and educating in various areas of technology related to software engineering and technology."
   }
 }
