--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -211,7 +211,7 @@
     "OF": "of",
     "MORENEWS": "View more news",
     "RECOMMENDED": "Recommended news",
-    "RATING": "What do you think of the post?"
+    "RATING": "What do you think about the post?"
   },
   "IEEEXTREME": {
     "FACTS": {
